--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
+setuptools>=65.0.0
+wheel>=0.37.0
 Flask==2.3.3
 Flask-CORS==4.0.0
 opencv-python-headless==4.8.1.78
 numpy==1.24.3
 gunicorn==21.2.0
-setuptools>=65.0.0
